my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/EINVOVER_confidentiality/T_EINVOVER_confidentiality-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_EINVOVER_CONFIDENTIALITY_STRUCT_H
#define T_EINVOVER_CONFIDENTIALITY_STRUCT_H

typedef struct test test_t;

conf_class_t *_initialize_T_EINVOVER_confidentiality(void);


#endif /* not T_EINVOVER_CONFIDENTIALITY_STRUCT_H */
